# flying-game

./: README.md  index.html  retro_website.html  web_flying_game.html
Angry Birds/: README.md  angry_birds.py  game.js  index.html
Legal Tech/: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package-lock.json  pyproject.toml
Legal Tech/.github/workflows/: ci.yml
Legal Tech/api/: Dockerfile  README.md  pyproject.toml
Legal Tech/api/app/: main.py
Legal Tech/api/app/api/endpoints/: jobs.py  rename.py
Legal Tech/api/app/core/: config.py
Legal Tech/api/app/services/: docusign_client.py  renamer.py  signature_detector.py
Legal Tech/api/app/tests/: test_jobs_api.py  test_renamer.py
Legal Tech/api/tests/: test_health.py  test_signature_detector.py
Legal Tech/api/tests/services/: test_renamer.py
Legal Tech/app/: main.py
Legal Tech/web/: Dockerfile  README.md  package-lock.json  package.json
Legal Tech/web/public/: index.html
Legal Tech/web/src/: App.tsx
