[tool.poetry]
name = "legal-tech"
version = "0.1.0"
description = "Legal Tech API with PDF processing capabilities"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
google-generativeai = "^0.3.2"
PyPDF2 = "^3.0.0"
pytesseract = "^0.3.10"
pdf2image = "^1.17.0"
python-multipart = "^0.0.9"
pydantic = "^2.6.0"
pytest = "^8.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 